medal_pie_chart.ipynb Finished

--- a/Assigments/Assignment-3/pi_aprrox.ipynb
+++ b/Assigments/Assignment-3/pi_aprrox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,21 +51,27 @@
     "    mu_n = (90*mu_n)**(0.25) \n",
     "    return(mu_n)\n",
     "\n",
+    "\n",
+    "#calling the functions for when n is 10\n",
     "n = 10\n",
     "rho_n = rho(n)\n",
     "tau_n = tau(n)\n",
     "mu_n = mu(n)\n",
     "\n",
+    "#print when n is 10\n",
     "print ('when n =    %d,      rho_n = %r' %(n,rho_n))\n",
     "print ('when n =    %d,      tau_n = %r' %(n,tau_n))\n",
     "print ('when n =    %d,       mu_n = %r' %(n,mu_n))\n",
     "print('\\n')\n",
     "\n",
+    "\n",
+    "#calling functions for when n is 100000\n",
     "n = 100000\n",
     "rho_n = rho(n)\n",
     "tau_n = tau(n)\n",
     "mu_n = mu(n)\n",
     "\n",
+    "#print when n is 100000\n",
     "print ('when n =    %d,      rho_n = %r' %(n,rho_n))\n",
     "print ('when n =    %d,      tau_n = %r' %(n,tau_n))\n",
     "print ('when n =    %d,       mu_n = %r' %(n,mu_n))\n"
