--- a/Final-Exam/fib_file.ipynb
+++ b/Final-Exam/fib_file.ipynb
@@ -2,12 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a positive integer: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def fib_file(n, fname):\n",
+    "    #This function Finds the fibonochi sequence for a given number and prints the output to a file. \n",
+    "    \n",
+    "    add = '0        0\\n'\n",
+    "    fname.write(add)\n",
+    "    add = '1        1\\n'\n",
+    "    fname.write(add)\n",
+    "    \n",
+    "    Fn_prev = 0\n",
+    "    Fn = 1\n",
+    "    \n",
+    "    for i in range (2,n+1):\n",
+    "        Fn_next = Fn+Fn_prev\n",
+    "        \n",
+    "        fname.write((str)(i))\n",
+    "        fname.write('        ')\n",
+    "        fname.write((str)(Fn_next))\n",
+    "        fname.write('\\n')\n",
+    "        \n",
+    "        Fn_prev = Fn\n",
+    "        Fn = Fn_next\n",
+    "\n",
+    "a = input('Please enter a positive integer: ')\n",
+    "assert(int(a) > 0)\n",
+    "\n",
+    "file1= open('fname_n.txt','w')\n",
+    "\n",
+    "fib_file(int(a),file1)\n",
+    "file1.close()"
+   ]
   }
  ],
  "metadata": {
@@ -26,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
